* 041cc88 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added list of features (HEAD, development) 
|  
* 42eee1d 
|  2015-07-10 
|  Kostya Zolotarov 
|  Updated background 
|  
* 720f956 
|  2015-07-10 
|  Kostya Zolotarov 
|  Enabled empty VERSION initialization (origin/development, origin/HEAD) 
|  
* 29121e1 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added file library 
|  
* 68ce5f4 
|  2015-07-10 
|  Kostya Zolotarov 
|  Added version library 
|  
* e33ebee 
|  2015-07-09 
|  Kostya Zolotarov 
|  Enabled aliasing for srcmod commands 
|  
* a3202a9 
|  2015-07-09 
|  Kostya Zolotarov 
|  Added install/uninstall commands to general toolkit; Install/uninstall can now handle other source modules 
|  
* 0c6d08a 
|  2015-07-03 
|  Kostya Zolotarov 
|  Added run and examples templates 
|  
* 4e51f85 
|  2015-07-03 
|  Kostya Zolotarov 
|  Updated background 
|  
* b25bf58 
|  2015-07-03 
|  Kostya Zolotarov 
|  Implemented numbered headings 
|  
* 6af890e 
|  2015-06-30 
|  Kostya Zolotarov 
|  Added chapter heading formatting type 
|  
* bbe4da9 
|  2015-06-30 
|  Kostya Zolotarov 
|  New changelog formatting 
|  
* 65affcb 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented reading tasks command configuration settings from ~/.srcmod 
|  
* 556144a 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented reading changelog command configuration settings from ~/.srcmod 
|  
* 4a998b6 
|  2015-06-30 
|  Kostya Zolotarov 
|  Implemented README chapter sequencing 
|  
* 7a1e09f 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for authors, build, files and version commands 
|  
* 57361f6 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for readme command 
|  
* 9b827ee 
|  2015-06-29 
|  Kostya Zolotarov 
|  Libraries install/uninstall fix 
|  
* 3546a92 
|  2015-06-29 
|  Kostya Zolotarov 
|  Implemented settings loading for uninstall command 
|  
* a2f50c5 
|  2015-06-29 
|  Kostya Zolotarov 
|  Moved templates to srcmod settings file 
|  