@@ -29,7 +29,6 @@ SOFTWARE.
 
 '
 
-# TODO - Implement verbose output mechanism
 # TODO - Implement logging of file line numbers
 # TODO - Implement scanning of ./tasks file
 # TODO - Implement error variable and error codes
@@ -46,13 +45,13 @@ search_keyword=TODO
 > $output_file
 for input_file in $input_files
 do
-    printf "$info Selecting $input_file...\n" >&2
+    printf "$info Selecting $input_file ...\n" >&2
     for exclude_file in ${exclude_files[@]};
     do 
-        printf "$info Comparing $input_file and $exclude_file...\n" >&2
+        printf "$info Comparing $input_file and $exclude_file ...\n" >&2
         if [ $input_file == $exclude_file ];
         then
-            printf "$info Excluding $input_file...\n" >&2
+            printf "$info Excluding $input_file ...\n" >&2
             exclude_file_match_found=true
             break
         else 
@@ -61,7 +60,7 @@ do
     done
     if [[ $exclude_file_match_found == false ]];
     then
-        printf "$info Scanning $input_file...\n" >&2
+        printf "$info Scanning $input_file ...\n" >&2
         while read line; 
         do 
             echo $line | grep $search_keyword > /dev/null
