@@ -1,7 +1,17 @@
+* c164180 
+|  2015-07-13 
+|  Kostya Zolotarov 
+|  Fixed VERSION file not found error (HEAD, development) 
+|  
+* f1440b3 
+|  2015-07-10 
+|  Kostya Zolotarov 
+|  Library for 'files' command 
+|  
 * 041cc88 
 |  2015-07-10 
 |  Kostya Zolotarov 
-|  Added list of features (HEAD, development) 
+|  Added list of features 
 |  
 * 42eee1d 
 |  2015-07-10 
